--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.0",
     "tw-elements-react": "^1.0.0-alpha2"
   },
