--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
+    "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.323.0",
     "react": "^18.2.0",
