--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.323.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.0",
