--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,34 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "autoprefixer": "^10.4.17",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
     "lottie-react": "^2.4.0",
-    "lottie-web": "^5.12.2",
-    "lucide-react": "^0.323.0",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.22.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tw-elements-react": "^1.0.0-alpha2"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
